5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1836_1280.log
== SUBMITION (2019-07-01 22:13:06) 
-- CODE:
from numpy import*
tabuleiro=(array(eval(input("Tabuleiro: "))))
mov=input("movimento ")
xtab= int(0)
ytab= int(0)
moeda= 0
life= 100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro)[0]-1
for x in mov:
	
	if(x=="A"):
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
	
	elif(x=="D"):
		xtab=xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
			
	elif(x=="W"):
		xtab=xtab-1
		if(ytab<0):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1
	
	if(tabuleiro[yrab,xtab]==11):
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif(tabuleiro[ytab,xtab]==22):
		life=life-5
		
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)	
print("life: ",life)
-- EXECUTION TIME:
1.17996
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1280/main.py", line 33, in <module>
    if(tabuleiro[yrab,xtab]==11):
NameError: name 'yrab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:15:56) 
-- CODE:
from numpy import*
tabuleiro=(array(eval(input("Tabuleiro: "))))
mov=input("movimento: ")
xtab= int(0)
ytab= int(0)
moeda= 0
life= 100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro)[0]-1

for x in mov:
	if(x=="A"):
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
	
	elif(x=="D"):
		xtab=xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
			
	elif(x=="W"):
		xtab=xtab-1
		if(ytab<0):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1
	
	elif(x=="S"):
		ytab=ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1
	
	if(tabuleiro[yrab,xtab]==11):
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif(tabuleiro[ytab,xtab]==22):
		life=life-5
		
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)	
print("life: ",life)
-- EXECUTION TIME:
0.947764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1280/main.py", line 40, in <module>
    if(tabuleiro[yrab,xtab]==11):
NameError: name 'yrab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:01:23) 
-- CODE:
from numpy import*
tabuleiro=(array(eval(input("Tabuleiro: "))))
mov=input("movimento: ")
xtab= int(0)
ytab= int(0)
moeda= 0
life= 100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro)[0]-1

for x in mov:
	if(x=="A"):
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
	
	elif(x=="D"):
		xtab=xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
			
	elif(x=="W"):
		ytab=ytab-1
		if(ytab<0):
			ytab=ytab+1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab+1
	
	elif(x=="S"):
		ytab=ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1
	
	if(tabuleiro[yrab,xtab]==11):
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif(tabuleiro[ytab,xtab]==22):
		life=life-5
		
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)	
print("life: ",life)
-- EXECUTION TIME:
1.08143
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1280/main.py", line 40, in <module>
    if(tabuleiro[yrab,xtab]==11):
NameError: name 'yrab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:01:32) 
-- CODE:
from numpy import*
tabuleiro=(array(eval(input("Tabuleiro: "))))
mov=input("movimento: ")
xtab= int(0)
ytab= int(0)
moeda= 0
life= 100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro)[0]-1

for x in mov:
	if(x=="A"):
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
	
	elif(x=="D"):
		xtab=xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
			
	elif(x=="W"):
		ytab=ytab-1
		if(ytab<0):
			ytab=ytab+1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab+1
	
	elif(x=="S"):
		ytab=ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1
	
	if(tabuleiro[yrab,xtab]==11):
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif(tabuleiro[ytab,xtab]==22):
		life=life-5
		
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)	
print("life: ",life)
-- EXECUTION TIME:
1.26541
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/1280/main.py", line 40, in <module>
    if(tabuleiro[yrab,xtab]==11):
NameError: name 'yrab' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:01:37) 
-- CODE:
from numpy import*
tabuleiro=(array(eval(input("Tabuleiro: "))))
mov=input("movimento: ")
xtab= int(0)
ytab= int(0)
moeda= 0
life= 100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro)[0]-1

for x in mov:
	if(x=="A"):
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
	
	elif(x=="D"):
		xtab=xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
			
	elif(x=="W"):
		ytab=ytab-1
		if(ytab<0):
			ytab=ytab+1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab+1
	
	elif(x=="S"):
		ytab=ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1
	
	if(tabuleiro[yrab,xtab]==11):
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif(tabuleiro[ytab,xtab]==22):
		life=life-5
		
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)	
print("life: ",life)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:03:04) 
-- CODE:
from numpy import*
tabuleiro=(array(eval(input("Tabuleiro: "))))
mov=input("movimento: ")
xtab= int(0)
ytab= int(0)
moeda= 0
life= 100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro)[0]-1

for x in mov:
	if(x=="A"):
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
	
	elif(x=="D"):
		xtab=xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
			
	elif(x=="W"):
		ytab=ytab-1
		if(ytab<0):
			ytab=ytab+1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab+1
	
	elif(x=="S"):
		ytab=ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1
	
	if(tabuleiro[ytab,xtab]==11):
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif(tabuleiro[ytab,xtab]==22):
		life=life-5
		
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)	
print("life: ",life)
-- EXECUTION TIME:
0.933178
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
Tabuleiro: movimento: posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
Tabuleiro: movimento: posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:03:42) 
-- CODE:
from numpy import*
tabuleiro=(array(eval(input("Tabuleiro: "))))
mov=input("movimento: ")
xtab= int(0)
ytab= int(0)
moeda= 0
life= 100
a=shape(tabuleiro)[1]-1
b=shape(tabuleiro)[0]-1

for x in mov:
	if(x=="A"):
		xtab=xtab-1
		if(xtab<0):
			xtab=xtab+1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab+1
	
	elif(x=="D"):
		xtab=xtab+1
		if(xtab>a):
			xtab=xtab-1
		if(tabuleiro[ytab,xtab]==33):
			xtab=xtab-1
			
	elif(x=="W"):
		ytab=ytab-1
		if(ytab<0):
			ytab=ytab+1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab+1
	
	elif(x=="S"):
		ytab=ytab+1
		if(ytab>b):
			ytab=ytab-1
		if(tabuleiro[ytab,xtab]==33):
			ytab=ytab-1
	
	if(tabuleiro[ytab,xtab]==11):
		moeda=moeda+1
		tabuleiro[ytab,xtab]=0
	elif(tabuleiro[ytab,xtab]==22):
		life=life-5
		
print("posicao x: ",xtab)
print("posicao y: ",ytab)
print("moedas: ",moeda)	
print("life: ",life)
-- EXECUTION TIME:
1.13638
-- TEST CASE 1:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
DDDDDWWWWSSSSDDDWSWDSDWDDDDDDDDDSSSSSSSSSSSDDDDWSADSWASADSWASD
---- correct output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
---- user output:
posicao x:  11
posicao y:  10
moedas:  13
life:  75
-- TEST CASE 2:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
SAWSDADDDDDDDDDDSSSSSSSSSSSDDDDDDDWWWWWWWWAAAAAAAAAAWSDAASDSWADSAWSWD
---- correct output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
---- user output:
posicao x:  5
posicao y:  3
moedas:  20
life:  75
-- TEST CASE 3:
---- input:
[[0,11,0,33,0,33,22,0,11,0,11,0,11],[11,0,22,11,0,11,33,0,11,0,0,0,22],[11,22,22,33,0,11,11,0,22,0,11,11,22],[22,33,0,11,0,11,11,0,22,0,0,0,0],[22,11,11,11,0,11,22,0,11,0,22,0,22],[11,11,22,33,0,0,11,0,22,0,0,22,11],[0,11,0,33,0,11,22,0,22,0,22,0,11],[0,11,33,11,0,11,22,0,11,0,0,11,11],[11,11,33,11,0,0,11,0,22,0,22,0,11],[0,11,22,11,0,11,22,0,22,0,0,0,11],[0,11,22,11,0,0,11,0,22,0,11,0,11]]
AWSWDSSDSDSDSDSAWAWAWASDSDSSASASASWDWDWDWDWASWDAWSWDAWSDWSADSWASDWSAWWDSADWSAWSWDSAWSW
---- correct output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
---- user output:
posicao x:  6
posicao y:  2
moedas:  13
life:  55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
